Fixed Nav by removing overflow (and hence scrollbar on windows)

--- a/public/css/aris_home.css
+++ b/public/css/aris_home.css
@@ -237,12 +237,12 @@ nav {
           display: block;
           background: #F5F5F5;
           height: 450px;
-          width: 940px;
+          width: 920px;
           position: absolute;
           z-index: 3000;
           top: 45px;
           left: 0;
-          overflow: auto; }
+          overflow: hidden; }
           nav ul.sections > li.active .navigation_wrapper .nav_title {
             margin: -10px;
             margin-bottom: 0;
